--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 - check 110% coordinate calculations
 - check ith other files => make a ratio (how many are missed)
 - voting system for images - optional
+- dont calculate minEnclosingCircle and convexHull multiple times
